PCHR-403: Fix vertical alignment on profile pic

--- a/civihr_default_theme/assets/sass/partials/_menu.scss
+++ b/civihr_default_theme/assets/sass/partials/_menu.scss
@@ -22,6 +22,10 @@
 
 .civihr_user-menu__data {
 
+    .civihr_user-menu__name {
+        float: left;
+    }
+
     @media(max-width: $screen-md-min) {
         .civihr_user-menu__name,
         .fa-caret-down {
@@ -33,8 +37,8 @@
 .civihr_user-menu__picture {
     border-radius: 50%;
     height: 34px;
-    margin: 0 7px;
-    vertical-align: middle;
+    margin: 8px; // To improve, the vertical margin is just to vertically align the image
+    vertical-align: top;
     width: 34px;
 }
 
